--- a/store.html
+++ b/store.html
@@ -65,6 +65,12 @@
       </div>
     </div>
   </main>
+<script>
+  window.YARDOS_API_URL = "https://script.google.com/macros/s/AKfycbwRXMtWXFH35aPQbjnfeA3gvQXnaSgtTZ4tgMiI5Psc6fAFmwj9-WdYG4L04qf0Rj5J/exec";
+  window.API_URL = window.YARDOS_API_URL;
+  window.API_BASE = window.YARDOS_API_URL;
+</script>
+<script src="./app.js"></script>
 
   <script src="./app.js"></script>
   <script>
