--- a/staging.html
+++ b/staging.html
@@ -237,9 +237,9 @@
 
 <script>
 /* ===================== CONFIG ===================== */
-const API_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; // <-- REQUIRED: your Apps Script Web App /exec URL
+const API_URL = "https://script.google.com/macros/s/AKfycbwRXMtWXFH35aPQbjnfeA3gvQXnaSgtTZ4tgMiI5Psc6fAFmwj9-WdYG4L04qf0Rj5J/exec"; // <-- REQUIRED: your Apps Script Web App /exec URL
 const API_KEY = ""; // optional: match backend API_KEY if you set one
-const PLACEHOLDER = "PASTE_YOUR_WEB_APP_URL_HERE";
+const PLACEHOLDER = "https://script.google.com/macros/s/AKfycbwRXMtWXFH35aPQbjnfeA3gvQXnaSgtTZ4tgMiI5Psc6fAFmwj9-WdYG4L04qf0Rj5J/exec";
 
 const STAGE = "STAGING";
 const NEXT_STAGE = "LOGISTICS";
