--- a/processing.html
+++ b/processing.html
@@ -234,7 +234,7 @@
 
 <script>
 /* ===================== CONFIG ===================== */
-const API_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; // <-- REQUIRED
+const API_URL = "https://script.google.com/macros/s/AKfycbwRXMtWXFH35aPQbjnfeA3gvQXnaSgtTZ4tgMiI5Psc6fAFmwj9-WdYG4L04qf0Rj5J/exec"; // <-- REQUIRED
 const API_KEY = ""; // optional: match backend API_KEY if you set one
 
 const STAGE = "PROCESSING";
