--- a/inventory_viewer.html
+++ b/inventory_viewer.html
@@ -245,7 +245,7 @@
   const API_BASE = "https://script.google.com/macros/s/AKfycbxOUySH9ghQ1AUkDSQ4miKqdhe8kqXrezSCIWjRpggrlu221GarsX4tGNXZkxRKkp9D/exec";
 
   // IMPORTANT: This must match the API_KEY string in your Apps Script api.gs
-  // Example: const API_KEY = "Falcon1-...long...random...";
+  // Example: const API_KEY = "Falcon1-9f3k2p7q-6m1v8z4r";
   const API_KEY  = "PASTE_YOUR_API_KEY_HERE";
 
   // Soft lock (keeps customers from casually opening it)
