--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TEK-PAK Inc | Multi-Service Hub</title>
-  <meta name="description" content="TEK-PAK Inc services hub: e-waste recycling, subscriptions, RC hobby gear, surplus sales, IT services, and paralegal support." />
+  <meta name="description" content="TEK-PAK Inc Services hub: e-waste recycling, subscriptions, RC hobby gear, surplus sales, IT services, and paralegal support." />
   <style>
     :root{
       --bg:#0b1020;
@@ -367,10 +367,10 @@
             <div class="quick-panel">
               <h3>Quick Access</h3>
               <ul class="quick-list">
-                <li><a href="https://NCElectronicRecycling.com" target="_blank" rel="noopener">NC Electronic Recycling <span>↗</span></a></li>
+                <li><a href="https://ncelectronicRecycling.com" target="_blank" rel="noopener">NC Electronic Recycling <span>↗</span></a></li>
                 <li><a href="#boxscription">TEK-PAK Boxscription <span>→</span></a></li>
-                <li><a href="https://RCReserve.com" target="_blank" rel="noopener">RCReserve.com <span>↗</span></a></li>
-                <li><a href="#store">TEK-PAK Store <span>→</span></a></li>
+                <li><a href="https://RCReserve.com" target="_blank" rel="noopener">www.thercreserve.com <span>↗</span></a></li>
+                <li><a href="www.tekpakinc.store">TEK-PAK Store <span>→</span></a></li>
                 <li><a href="#services-it">TEK-PAK Services <span>→</span></a></li>
                 <li><a href="#legal">Dann Sauer, CLA <span>→</span></a></li>
               </ul>
