--- a/careers.html
+++ b/careers.html
@@ -404,3 +404,453 @@ TEK-PAK HEADER (UPDATED MENU)
     });
   })();
 </script>
+
+<!-- =========================
+TEK-PAK IT SERVICES - MAIN HOMEPAGE (MIDDLE CONTENT ONLY)
+No header / no nav / no footer
+========================= -->
+<section class="tp-home-wrap" aria-label="Tek-Pak IT Services Main Landing">
+  <div class="tp-bg-grid" aria-hidden="true"></div>
+  <div class="tp-bg-glow tp-bg-glow-1" aria-hidden="true"></div>
+  <div class="tp-bg-glow tp-bg-glow-2" aria-hidden="true"></div>
+
+  <div class="tp-container">
+    <!-- Hero -->
+    <section class="tp-hero">
+      <p class="tp-kicker">TEK-PAK IT SERVICES</p>
+      <h1>Enterprise-Level IT.<br><span>Friendly, Human Support.</span></h1>
+      <p class="tp-hero-sub">
+        We help businesses stay secure, connected, and productive with responsive support, practical strategy,
+        and real-world solutions—without the corporate runaround.
+      </p>
+
+      <div class="tp-hero-actions">
+        <a href="/contact" class="tp-btn tp-btn-primary">Book a Consultation</a>
+        <a href="/it-services" class="tp-btn tp-btn-ghost">Explore All IT Services</a>
+      </div>
+
+      <div class="tp-trust-row" role="list" aria-label="Trust Highlights">
+        <div class="tp-trust-chip" role="listitem">Managed IT Services</div>
+        <div class="tp-trust-chip" role="listitem">Cybersecurity & Hardening</div>
+        <div class="tp-trust-chip" role="listitem">Help Desk & Remote Support</div>
+        <div class="tp-trust-chip" role="listitem">On-Site Business IT</div>
+      </div>
+    </section>
+
+    <!-- Direction / Routing Cards -->
+    <section class="tp-route">
+      <h2>Let’s Get You to the Right Place</h2>
+      <p class="tp-section-sub">
+        Choose what you need now. We’ll handle the complexity behind the scenes.
+      </p>
+
+      <div class="tp-card-grid">
+        <a class="tp-card" href="/it-services/managed-it">
+          <div class="tp-card-icon" aria-hidden="true">🖥️</div>
+          <h3>Managed IT Services</h3>
+          <p>Proactive monitoring, patching, system health, and day-to-day IT operations.</p>
+          <span class="tp-card-link">Go to Managed IT →</span>
+        </a>
+
+        <a class="tp-card" href="/it-services/help-desk">
+          <div class="tp-card-icon" aria-hidden="true">🎧</div>
+          <h3>Help Desk & User Support</h3>
+          <p>Fast issue resolution, remote troubleshooting, and support your team actually enjoys using.</p>
+          <span class="tp-card-link">Go to Help Desk →</span>
+        </a>
+
+        <a class="tp-card" href="/it-services/cybersecurity">
+          <div class="tp-card-icon" aria-hidden="true">🔐</div>
+          <h3>Cybersecurity</h3>
+          <p>Endpoint protection, policy setup, best-practice hardening, and threat risk reduction.</p>
+          <span class="tp-card-link">Go to Security →</span>
+        </a>
+
+        <a class="tp-card" href="/it-services/cloud">
+          <div class="tp-card-icon" aria-hidden="true">☁️</div>
+          <h3>Cloud & Microsoft 365</h3>
+          <p>Migration planning, tenant support, identity controls, and streamlined collaboration.</p>
+          <span class="tp-card-link">Go to Cloud Services →</span>
+        </a>
+
+        <a class="tp-card" href="/it-services/networking">
+          <div class="tp-card-icon" aria-hidden="true">🌐</div>
+          <h3>Networking & Infrastructure</h3>
+          <p>Reliable networks, clean architecture, Wi-Fi optimization, and smart scaling.</p>
+          <span class="tp-card-link">Go to Networking →</span>
+        </a>
+
+        <a class="tp-card" href="/it-services/projects">
+          <div class="tp-card-icon" aria-hidden="true">🚀</div>
+          <h3>IT Projects & Upgrades</h3>
+          <p>Office moves, workstation rollouts, lifecycle refreshes, and implementation support.</p>
+          <span class="tp-card-link">Go to IT Projects →</span>
+        </a>
+      </div>
+    </section>
+
+    <!-- Why Tek-Pak -->
+    <section class="tp-why">
+      <div class="tp-why-copy">
+        <h2>Why Businesses Choose Tek-Pak</h2>
+        <p>
+          You get high-level technical capability with practical communication and dependable follow-through.
+          We prioritize uptime, security, and business continuity while keeping support personal.
+        </p>
+
+        <ul class="tp-bullets">
+          <li>Clear communication (no confusing tech jargon overload)</li>
+          <li>Fast response and accountable service</li>
+          <li>Scalable support for growing teams</li>
+          <li>Security-minded decisions across your environment</li>
+        </ul>
+      </div>
+
+      <div class="tp-why-panel" aria-label="Service Focus Highlights">
+        <div class="tp-metric">
+          <strong>Proactive</strong>
+          <span>Issue prevention over reactive firefighting</span>
+        </div>
+        <div class="tp-metric">
+          <strong>Secure</strong>
+          <span>Defense-focused setup and maintenance</span>
+        </div>
+        <div class="tp-metric">
+          <strong>Responsive</strong>
+          <span>Support that feels local and dedicated</span>
+        </div>
+        <div class="tp-metric">
+          <strong>Strategic</strong>
+          <span>IT aligned to business goals and budget</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA Band -->
+    <section class="tp-cta-band">
+      <div>
+        <h2>Need help now?</h2>
+        <p>Tell us what’s going on, and we’ll point you to the right service path quickly.</p>
+      </div>
+      <div class="tp-cta-actions">
+        <a href="/contact" class="tp-btn tp-btn-primary">Start a Support Request</a>
+        <a href="/it-services" class="tp-btn tp-btn-ghost">View Service Catalog</a>
+      </div>
+    </section>
+  </div>
+</section>
+
+<style>
+  :root{
+    --tp-blue-900:#0b1733;
+    --tp-blue-800:#10224a;
+    --tp-blue-700:#163066;
+    --tp-blue-500:#2463d6;
+    --tp-blue-300:#87b2ff;
+
+    --tp-lime-500:#9BFF2E;
+    --tp-lime-400:#b7ff67;
+
+    --tp-white:#ffffff;
+    --tp-ink:#eaf1ff;
+    --tp-muted:#b8c5e3;
+    --tp-line:rgba(255,255,255,.13);
+    --tp-glass:rgba(255,255,255,.06);
+    --tp-shadow:0 18px 45px rgba(0,0,0,.35);
+  }
+
+  .tp-home-wrap{
+    position:relative;
+    isolation:isolate;
+    overflow:hidden;
+    background:
+      radial-gradient(1400px 700px at 20% -10%, rgba(36,99,214,.20), transparent 55%),
+      radial-gradient(1200px 600px at 100% 10%, rgba(155,255,46,.11), transparent 45%),
+      linear-gradient(180deg, #081224 0%, #0b1733 45%, #0a1838 100%);
+    color:var(--tp-ink);
+    padding: clamp(48px, 7vw, 96px) 20px clamp(64px, 8vw, 110px);
+    font-family: "Inter", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  }
+
+  .tp-bg-grid{
+    position:absolute; inset:0;
+    background-image:
+      linear-gradient(to right, rgba(255,255,255,.06) 1px, transparent 1px),
+      linear-gradient(to bottom, rgba(255,255,255,.06) 1px, transparent 1px);
+    background-size: 44px 44px;
+    mask-image: radial-gradient(circle at center, black 40%, transparent 90%);
+    opacity:.23;
+    pointer-events:none;
+    z-index:-2;
+  }
+
+  .tp-bg-glow{
+    position:absolute;
+    width:520px; height:520px;
+    border-radius:999px;
+    filter:blur(60px);
+    pointer-events:none;
+    z-index:-1;
+  }
+  .tp-bg-glow-1{ left:-140px; top:-120px; background:rgba(36,99,214,.30);}
+  .tp-bg-glow-2{ right:-180px; top:120px; background:rgba(155,255,46,.20);}
+
+  .tp-container{
+    width:min(1180px, 100%);
+    margin-inline:auto;
+    display:grid;
+    gap: clamp(38px, 5vw, 66px);
+  }
+
+  .tp-kicker{
+    display:inline-flex;
+    align-items:center;
+    gap:.45rem;
+    border:1px solid var(--tp-line);
+    background:linear-gradient(180deg, rgba(255,255,255,.09), rgba(255,255,255,.03));
+    padding:.42rem .78rem;
+    border-radius:999px;
+    font-size:.74rem;
+    font-weight:700;
+    letter-spacing:.12em;
+    text-transform:uppercase;
+    color:var(--tp-lime-500);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.22);
+  }
+
+  .tp-hero h1{
+    margin:16px 0 14px;
+    font-size:clamp(2rem, 4.6vw, 4rem);
+    line-height:1.08;
+    letter-spacing:-.02em;
+  }
+
+  .tp-hero h1 span{
+    color:var(--tp-white);
+    text-shadow:0 2px 20px rgba(155,255,46,.18);
+  }
+
+  .tp-hero-sub{
+    max-width:760px;
+    margin:0;
+    font-size:clamp(1rem, 1.35vw, 1.2rem);
+    color:var(--tp-muted);
+    line-height:1.7;
+  }
+
+  .tp-hero-actions{
+    display:flex;
+    flex-wrap:wrap;
+    gap:12px;
+    margin-top:24px;
+  }
+
+  .tp-btn{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    text-decoration:none;
+    font-weight:700;
+    border-radius:14px;
+    padding:12px 18px;
+    border:1px solid transparent;
+    transition:transform .18s ease, box-shadow .2s ease, border-color .2s ease, background .2s ease;
+    will-change:transform;
+  }
+
+  .tp-btn:hover{ transform: translateY(-2px); }
+
+  .tp-btn-primary{
+    background:linear-gradient(180deg, var(--tp-lime-400), var(--tp-lime-500));
+    color:#112600;
+    box-shadow:0 10px 28px rgba(155,255,46,.25), inset 0 1px 0 rgba(255,255,255,.5);
+  }
+
+  .tp-btn-ghost{
+    color:var(--tp-ink);
+    border-color:var(--tp-line);
+    background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.03));
+    box-shadow:inset 0 1px 0 rgba(255,255,255,.25);
+  }
+
+  .tp-trust-row{
+    display:flex;
+    flex-wrap:wrap;
+    gap:10px;
+    margin-top:20px;
+  }
+
+  .tp-trust-chip{
+    border:1px solid var(--tp-line);
+    background:var(--tp-glass);
+    border-radius:999px;
+    padding:8px 12px;
+    font-size:.86rem;
+    color:#d6e4ff;
+    backdrop-filter: blur(8px);
+  }
+
+  .tp-route h2,
+  .tp-why h2,
+  .tp-cta-band h2{
+    margin:0 0 10px;
+    font-size:clamp(1.5rem, 2.5vw, 2.2rem);
+    letter-spacing:-.01em;
+  }
+
+  .tp-section-sub{
+    margin:0 0 22px;
+    color:var(--tp-muted);
+    font-size:1rem;
+  }
+
+  .tp-card-grid{
+    display:grid;
+    grid-template-columns:repeat(12, 1fr);
+    gap:14px;
+  }
+
+  .tp-card{
+    grid-column:span 4;
+    text-decoration:none;
+    color:inherit;
+    border:1px solid var(--tp-line);
+    background:linear-gradient(165deg, rgba(255,255,255,.10), rgba(255,255,255,.03) 65%);
+    border-radius:20px;
+    padding:20px;
+    box-shadow:var(--tp-shadow);
+    backdrop-filter: blur(9px);
+    transition:transform .2s ease, border-color .2s ease, box-shadow .22s ease;
+  }
+
+  .tp-card:hover{
+    transform:translateY(-4px);
+    border-color:rgba(155,255,46,.45);
+    box-shadow:0 22px 45px rgba(0,0,0,.42), 0 0 0 1px rgba(155,255,46,.16) inset;
+  }
+
+  .tp-card-icon{
+    font-size:1.4rem;
+    margin-bottom:8px;
+    filter:drop-shadow(0 2px 10px rgba(155,255,46,.25));
+  }
+
+  .tp-card h3{
+    margin:0 0 8px;
+    font-size:1.1rem;
+    line-height:1.3;
+    color:#f4f8ff;
+  }
+
+  .tp-card p{
+    margin:0 0 14px;
+    color:var(--tp-muted);
+    font-size:.95rem;
+    line-height:1.6;
+  }
+
+  .tp-card-link{
+    color:var(--tp-lime-500);
+    font-weight:700;
+    font-size:.92rem;
+  }
+
+  .tp-why{
+    display:grid;
+    grid-template-columns:1.15fr .85fr;
+    gap:16px;
+    align-items:stretch;
+  }
+
+  .tp-why-copy,
+  .tp-why-panel{
+    border:1px solid var(--tp-line);
+    background:linear-gradient(180deg, rgba(255,255,255,.09), rgba(255,255,255,.03));
+    border-radius:22px;
+    padding:22px;
+    box-shadow:var(--tp-shadow);
+  }
+
+  .tp-why-copy p{
+    margin:0 0 12px;
+    color:var(--tp-muted);
+    line-height:1.72;
+  }
+
+  .tp-bullets{
+    margin:0;
+    padding-left:18px;
+    color:#dce8ff;
+    display:grid;
+    gap:8px;
+    line-height:1.45;
+  }
+
+  .tp-why-panel{
+    display:grid;
+    gap:12px;
+    align-content:start;
+  }
+
+  .tp-metric{
+    border:1px solid var(--tp-line);
+    border-radius:14px;
+    padding:12px 14px;
+    background:rgba(255,255,255,.04);
+  }
+
+  .tp-metric strong{
+    display:block;
+    color:#f8fbff;
+    font-size:1rem;
+    margin-bottom:4px;
+  }
+
+  .tp-metric span{
+    color:var(--tp-muted);
+    font-size:.92rem;
+  }
+
+  .tp-cta-band{
+    border:1px solid rgba(155,255,46,.35);
+    border-radius:22px;
+    padding:22px;
+    display:flex;
+    gap:18px;
+    justify-content:space-between;
+    align-items:center;
+    background:
+      linear-gradient(180deg, rgba(155,255,46,.17), rgba(155,255,46,.08)),
+      linear-gradient(140deg, rgba(255,255,255,.12), rgba(255,255,255,.03));
+    box-shadow:0 18px 35px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.35);
+  }
+
+  .tp-cta-band p{
+    margin:0;
+    color:#e6f1ff;
+  }
+
+  .tp-cta-actions{
+    display:flex;
+    flex-wrap:wrap;
+    gap:10px;
+  }
+
+  @media (max-width: 980px){
+    .tp-card{ grid-column:span 6; }
+    .tp-why{
+      grid-template-columns:1fr;
+    }
+  }
+
+  @media (max-width: 640px){
+    .tp-home-wrap{ padding-inline:14px; }
+    .tp-card{ grid-column:span 12; }
+    .tp-cta-band{
+      flex-direction:column;
+      align-items:flex-start;
+    }
+    .tp-btn{ width:100%; }
+    .tp-cta-actions{ width:100%; }
+  }
+</style>
